# HeartDisease-prediction

./: .env  .gitignore  Decision_tree.ipynb  Heart Disease Prediction-checkpoint.ipynb  Knn.ipynb  Naive Bayes.ipynb  app.py  heart.csv  pyproject.toml
.ipynb_checkpoints/: Allmodels-checkpoint.ipynb
datasets/: cleve.csv
ipynbfiles/: Allmodels.ipynb  GBDT+LR.ipynb  HRFLM.ipynb  Heart Disease Prediction.ipynb  Logistic regression.ipynb  SvM.ipynb  XGBOOST+LR.ipynb
src/: database.py  exception.py  loadData.py  logger.py
